syntax = "proto3";

import "scalapb/scalapb.proto";

package max;

option java_package = "com.kensai.grpc.proto";
option java_multiple_files = true;

message MaxRequest {
  int64 value  = 1;
}

message MaxResponse {
  int64 max = 1;
}

service MaxService {
  rpc ComputeMax(stream MaxRequest) returns (stream MaxResponse) {};
}
